--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -562,6 +562,14 @@ input[type=text][readonly].calendarIcon {
     text-align:left;
     width:100%;
 }
+.searchbox .inputItem a:nth-child(2) {
+    display:block;
+    text-align:left;
+    width:180px;
+}
+.searchbox .inputItem a:nth-child(2) input[type=text] {
+    width:calc(100%) !important;
+}
 /* 文言要素 */
 .searchbox .inputItem a:nth-child(2n+1) {
     display:block;
