--- a/JOTWEB/OIL/css/OIM0005S.css
+++ b/JOTWEB/OIL/css/OIM0005S.css
@@ -1,91 +1,2 @@
-﻿/* タンク車マスタ検索画面*/
-/*JOT車番見出し*/
-#WF_TANKNUMBER_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 70px;
-    top: calc(15% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-
-/*JOT車番input tag*/
-#WF_TANKNUMBER {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(19% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-#WF_TANKNUMBER input[type='text'] {
-    Height: 2.1em;
-    Width: 10em;
-}
-
-/*左Boxオープン用虫眼鏡アイコン ※ワンクリック用*/
-#WF_TANKNUMBER_ICON {
-    position: fixed;
-    height: 50px;
-    width: 50px;
-    top: calc(20.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}
-
-/*JOT車番名称*/
-#WF_TANKNUMBER_TEXT {
-    position: fixed;
-    top: calc(20% - 50px/2);
-    left: calc(55% - 50px/2);
-}
-
-/*型式見出し*/
-#WF_MODEL_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 70px;
-    top: calc(27% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*型式input tag*/
-#WF_MODEL {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(31% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-#WF_MODEL input[type='text'] {
-        Height: 2.1em;
-        Width: 10em;
-}
-
-/*左Boxオープン用虫眼鏡アイコン ※ワンクリック用*/
-#WF_MODEL_ICON {
-    position: fixed;
-    height: 50px;
-    width: 50px;
-    top: calc(32.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}
-
-/*左Boxオープン用虫眼鏡アイコン*/
-.BoxIcon {
-    background-image: url(../img/leftbox.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
-}
-
-/*カレンダーオープン用アイコン*/
-.CalendarIcon {
-    background-image: url(../img/calendar.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
+﻿body {
 }
