--- a/JOTWEB/OIL/css/OIT0002S.css
+++ b/JOTWEB/OIL/css/OIT0002S.css
@@ -1,166 +1,4 @@
-﻿/* 貨車連結順序表検索画面*/
-/* #################１行目 ################# */
-/*空車着駅コード見出し*/
-#WF_RETSTATION_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(15% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*空車着駅コード(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_RETSTATION_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: calc(20.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}
-
-/*空車着駅コードinput tag*/
-#WF_RETSTATION {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(19% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-    #WF_RETSTATION input[type='text'] {
-        Height: 2.1em;
-        Width: 10em;
-    }
-
-/*空車着駅名称*/
-#WF_RETSTATION_TEXT {
-    position: fixed;
-    top: calc(20% - 50px/2);
-    left: calc(55% - 50px/2);
-}
-
-/* #################２行目 ################# */
-/*開始年月日見出し*/
-#WF_STYMD_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(27% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*開始年月日(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_STYMD_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: calc(32.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}
-
-/*開始年月日input tag*/
-#WF_STYMD {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(31% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-    #WF_STYMD input[type='text'] {
-        Height: 2.1em;
-        Width: 10em;
-    }
-
-/*終了年月日見出し*/
-#WF_ENDYMD_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 70px;
-    top: calc(32% - 50px/2);
-    left: calc(55% - 50px/2);
-    color: #737373;
-}
-
-/*終了年月日(虫眼鏡アイコン ※ワンクリック用)*/
-/*#WF_ENDYMD_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: calc(40.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}*/
-
-/*終了年月日input tag*/
-/*#WF_ENDYMD {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(39% - 50px/2);
-    left: calc(46% - 140px/2);
-}*/
-
-    /*#WF_ENDYMD input[type='text'] {
-        Height: 2.1em;
-        Width: 10em;
-    }*/
-
-/* #################３行目 ################# */
-/*本線列車番号見出し*/
-#WF_TRAINNO_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 70px;
-    top: calc(39% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*本線列車番号input tag*/
-#WF_TRAINNO {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(43% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-    #WF_TRAINNO input[type='text'] {
-        Height: 2.1em;
-        Width: 10em;
-    }
-
-/*本線列車番号名称*/
-/*#WF_TRAINNO_TEXT {
-    position: fixed;
-    top: calc(44% - 50px/2);
-    left: calc(55% - 140px/2);
-}*/
-
-/* #################４行目 ################# */
-/*ステータス見出し*/
-#WF_SW_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 210px;
-    top: calc(51% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*ステータスボタン配置*/
-#checkbox {
-    position: fixed;
-    height: 35px;
-    top: calc(55% - 50px/2);
-    left: calc(43.5% - 70px/2);
-}
-
+﻿/*ステータスボタン配置*/
 .inline-radio {
     display: flex;
     border-radius: 0.1em;
@@ -173,30 +11,30 @@
     flex: 1;
 }
 
-    .inline-radio input {
-        height: 50px;
-        width: 140px;
-        opacity: 0;
+.inline-radio input {
+    height: 50px;
+    width: 140px;
+    opacity: 0;
+}
+
+    .inline-radio label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: #b6b6b6;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        pointer-events: none;
+        /*  border-right: 0.1em solid #b6b6b6;*/
     }
 
-.inline-radio label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #b6b6b6;
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    pointer-events: none;
-  /*  border-right: 0.1em solid #b6b6b6;*/
-}
-
-.inline-radio div:last-child label {
-    border-right: 0;
-}
+    .inline-radio div:last-child label {
+        border-right: 0;
+    }
 
     .inline-radio input:checked + label {
         background: rgba(176, 176, 276, 0.6);
