--- a/JOTWEB/OIL/css/OIS0001S.css
+++ b/JOTWEB/OIL/css/OIS0001S.css
@@ -1,164 +1,2 @@
-﻿/* ユーザーID検索画面*/
-/*会社コード見出し*/
-#WF_CAMPCODE_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(15% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*会社コード(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_CAMPCODE_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: calc(20.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}
-
-/*会社コードinput tag*/
-#WF_CAMPCODE {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(19% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-    #WF_CAMPCODE input[type='text'] {
-        Height: 2.1em;
-        Width: 10em;
-    }
-
-/*会社名称*/
-#WF_CAMPCODE_TEXT {
-    position: fixed;
-    top: calc(20% - 50px/2);
-    left: calc(55% - 50px/2);
-}
-
-/*開始年月日見出し*/
-#WF_STYMD_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 210px;
-    top: calc(27% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*開始年月日(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_STYMD_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: calc(31.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}
-
-/*開始年月日input tag*/
-#WF_STYMD {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(30% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-    #WF_STYMD input[type='text'] {
-        Height: 2.1em;
-        Width: 10em;
-    }
-
-/*終了年月日見出し*/
-#WF_ENDYMD_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 210px;
-    top: calc(36% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*終了年月日(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_ENDYMD_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: calc(40.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}
-
-/*終了年月日input tag*/
-#WF_ENDYMD {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(39% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-    #WF_ENDYMD input[type='text'] {
-        Height: 2.1em;
-        Width: 10em;
-    }
-
-/*組織コード見出し*/
-#WF_ORG_LABEL {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(48% - 50px/2);
-    left: calc(43.5% - 70px/2);
-    color: #737373;
-}
-
-/*組織コード(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_ORG_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: calc(53.5% - 50px/2);
-    left: calc(44.5% - 140px/2);
-    cursor: pointer;
-}
-
-/*組織コードinput tag*/
-#WF_ORG {
-    position: fixed;
-    height: 50px;
-    width: 140px;
-    top: calc(52% - 50px/2);
-    left: calc(46% - 140px/2);
-}
-
-#WF_ORG input[type='text'] {
-    Height: 2.1em;
-    Width: 10em;
-}
-
-/*組織名称*/
-#WF_ORG_TEXT {
-    position: fixed;
-    top: calc(53% - 50px/2);
-    left: calc(55% - 50px/2);
-}
-
-/*左Boxオープン用虫眼鏡アイコン*/
-.BoxIcon {
-    background-image: url(../img/leftbox.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
-}
-
-/*カレンダーオープン用アイコン*/
-.CalendarIcon {
-    background-image: url(../img/calendar.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
+﻿body {
 }
