--- a/JOTWEB/OIL/css/OIT0002D.css
+++ b/JOTWEB/OIL/css/OIT0002D.css
@@ -1,631 +1,126 @@
-﻿/* 貨車連結順序表明細画面 */
-/* #################１行目 ################# */
-/* 登録営業所(ラベル) */
-#WF_OFFICECODE_LABEL {
-    position: fixed;
-    top: 4.5em;
-    left: 2em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
+﻿/* コンテンツの余白 */
+.actionButtonBox,
+.commonHeaderInput,
+.summaryArea,
+#pnlListArea {
+    padding-left: 20px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
-/*登録営業所コード(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_OFFICECODE_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: 4.7em;
-    left: 11.5em;
-    cursor: pointer;
-    z-index: 2;
+.actionButtonBox {
+    // margin-bottom: 5px;
+    // margin-top: 5px;
+}
+/* 4項目構えの最左を除く項目名フィールドを少し縮める */
+.commonHeaderInput > span:nth-child(even) > a:nth-child(1) {
+    width: 90px; /* 共通設定は115px */
 }
 
-/*登録営業所コード */
-#WF_OFFICECODE {
-    position: fixed;
-    top: 4.5em;
-    left: 11.5em;
-    border-radius: 3px;
-    padding-left: 21px;
-    Height: 1.4em;
+.commonHeaderInput > span:nth-child(even) {
+    /* 一項目の共通設定幅280px - (共通設定115px - 上記width) */
+    width: 255px;
 }
 
-    #WF_OFFICECODE input[type='text'] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-/* #################２行目 ################# */
-/* -----------------１列目 ----------------- */
-/* 本社列車(ラベル) */
-#WF_TRAIN_LABEL {
-    position: fixed;
-    top: 6.5em;
-    left: 2em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
+.commonHeaderInput {
+    width: 1105px;
 }
 
-/*本社列車コード(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_TRAIN_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: 6.7em;
-    left: 11.5em;
-    cursor: pointer;
-    z-index: 2;
+/* コンテンツの最小横幅 */
+.headerbox, .detailbox {
+    min-width: 1080px;
 }
-
-/*本社列車コード */
-#WF_TRAINCODE {
-    position: fixed;
-    top: 6.5em;
-    left: 11.5em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_TRAINCODE input[type='text'] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-/* -----------------２列目 ----------------- */
-/* 利用可能日(ラベル) */
-#WF_AVAILABLEYMD_LABEL {
-    position: fixed;
-    top: 6.5em;
-    left: 32.0em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-
-/*利用可能日(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_AVAILABLEYMD_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: 6.7em;
-    left: 41.0em;
-    cursor: pointer;
-    z-index: 2;
-}
-
-/*利用可能日 */
-#WF_AVAILABLEYMD {
-    position: fixed;
-    top: 6.5em;
-    left: 41.0em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_AVAILABLEYMD input[type='text'] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-/* #################３行目 ################# */
-/* -----------------１列目 ----------------- */
-/* 空車発駅(ラベル) */
-#WF_DEPSTATION_LABEL {
-    position: fixed;
-    top: 8.5em;
-    left: 2.0em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-
-/*空車発駅コード(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_DEPSTATION_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: 8.7em;
-    left: 11.5em;
-    cursor: pointer;
-    z-index: 2;
-}
-
-/*空車発駅コード */
-#WF_DEPSTATIONCODE {
-    position: fixed;
-    top: 8.5em;
-    left: 11.5em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_DEPSTATIONCODE input[type='text'] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-/* 空車発駅名 */
-#WF_DEPSTATIONNAME {
-    position: fixed;
-    top: 8.5em;
-    left: 21.5em;
-}
-
-    #WF_DEPSTATIONNAME input[type=text] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-/* -----------------２列目 ----------------- */
-/* 空車着駅(ラベル) */
-#WF_RETSTATION_LABEL {
-    position: fixed;
-    top: 8.5em;
-    left: 32.0em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-
-/*空車着駅コード(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_RETSTATION_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: 8.7em;
-    left: 41.0em;
-    cursor: pointer;
-    z-index: 2;
-}
-
-/*空車着駅コード */
-#WF_RETSTATIONCODE {
-    position: fixed;
-    top: 8.5em;
-    left: 41.0em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_RETSTATIONCODE input[type='text'] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-/* 空車着駅名 */
-#WF_RETSTATIONNAME {
-    position: fixed;
-    top: 8.5em;
-    left: 51.0em;
-}
-
-    #WF_RETSTATIONNAME input[type=text] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-/* #################４行目 ################# */
-/* -----------------１列目 ----------------- */
-/* (予定)空車着日(ラベル) */
-#WF_EMPARRDATE_LABEL {
-    position: fixed;
-    top: 10.5em;
-    left: 2em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-
-/*(予定)空車着日(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_EMPARRDATE_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: 10.7em;
-    left: 11.5em;
-    cursor: pointer;
-    z-index: 2;
-}
-
-/*(予定)空車着日 */
-#WF_EMPARRDATE {
-    position: fixed;
-    top: 10.5em;
-    left: 11.5em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_EMPARRDATE input[type='text'] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-/* -----------------２列目 ----------------- */
-/* (実績)空車着日(ラベル) */
-#WF_ACTUALEMPARRDATE_LABEL {
-    position: fixed;
-    top: 10.5em;
-    left: 32.0em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-
-/*(実績)空車着日(虫眼鏡アイコン ※ワンクリック用)*/
-#WF_ACTUALEMPARRDATE_ICON {
-    position: fixed;
-    height: 20px;
-    width: 20px;
-    top: 10.7em;
-    left: 41.0em;
-    cursor: pointer;
-    z-index: 2;
-}
-
-/*(実績)空車着日 */
-#WF_ACTUALEMPARRDATE {
-    position: fixed;
-    top: 10.5em;
-    left: 41.0em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_ACTUALEMPARRDATE input[type='text'] {
-        Height: 1.4em;
-        Width: 10em;
-    }
-
-
-/* #################５行目 ################# */
-/* タンク車数一覧 */
-/* -----------------１列目 ----------------- */
-/* 油種別タンク車数(車)(ラベル) */
-#WF_OILTANKCNT_LABEL {
-    position: fixed;
-    top: 15em;
-    left: 2em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-
-/* -----------------２列目 ----------------- */
-/* 合計車数(ラベル) */
-#WF_TOTALTANK_LABEL {
-    position: fixed;
-    top: 15em;
-    left: 14em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 合計車数 */
-#WF_TOTALTANK {
-    position: fixed;
-    top: 13.1em;
-    left: 15em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_TOTALTANK input[type='text'] {
-        Height: 6.1em;
-        Width: 5em;
-    }
-
-/* -----------------３列目 ----------------- */
-/* 車数（ハイオク）(ラベル) */
-#WF_HTANK_LABEL {
-    position: fixed;
-    top: 13em;
-    left: 21em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（ハイオク） */
-#WF_HTANK {
-    position: fixed;
-    top: 14.3em;
-    left: 19.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_HTANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-/* 車数（レギュラー）(ラベル) */
-#WF_RTANK_LABEL {
-    position: fixed;
-    top: 15.7em;
-    left: 21em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（レギュラー） */
-#WF_RTANK {
-    position: fixed;
-    top: 17em;
-    left: 19.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_RTANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-
-/* -----------------４列目 ----------------- */
-/* 車数（灯油）(ラベル) */
-#WF_TTANK_LABEL {
-    position: fixed;
-    top: 13em;
-    left: 27em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（灯油） */
-#WF_TTANK {
-    position: fixed;
-    top: 14.3em;
-    left: 25.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_TTANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-/* 車数（未添加灯油）(ラベル) */
-#WF_MTTANK_LABEL {
-    position: fixed;
-    top: 15.7em;
-    left: 27em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（未添加灯油） */
-#WF_MTTANK {
-    position: fixed;
-    top: 17em;
-    left: 25.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_MTTANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-
-/* -----------------５列目 ----------------- */
-/* 車数（軽油）(ラベル) */
-#WF_KTANK_LABEL {
-    position: fixed;
-    top: 13em;
-    left: 33em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（軽油） */
-#WF_KTANK {
-    position: fixed;
-    top: 14.3em;
-    left: 31.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_KTANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-/* 車数（３号軽油）(ラベル) */
-#WF_K3TANK_LABEL {
-    position: fixed;
-    top: 15.7em;
-    left: 33em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（３号軽油） */
-#WF_K3TANK {
-    position: fixed;
-    top: 17em;
-    left: 31.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_K3TANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-
-/* -----------------６列目 ----------------- */
-/* 車数（５号軽油）(ラベル) */
-#WF_K5TANK_LABEL {
-    position: fixed;
-    top: 13em;
-    left: 39em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（５号軽油） */
-#WF_K5TANK {
-    position: fixed;
-    top: 14.3em;
-    left: 37.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_K5TANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-/* 車数（１０号軽油）(ラベル) */
-#WF_K10TANK_LABEL {
-    position: fixed;
-    top: 15.7em;
-    left: 39em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（１０号軽油） */
-#WF_K10TANK {
-    position: fixed;
-    top: 17em;
-    left: 37.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_K10TANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-/* -----------------７列目 ----------------- */
-/* 車数（LSA）(ラベル) */
-#WF_LTANK_LABEL {
-    position: fixed;
-    top: 13em;
-    left: 45em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（LSA） */
-#WF_LTANK {
-    position: fixed;
-    top: 14.3em;
-    left: 43.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_LTANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-/* 車数（A重油）(ラベル) */
-#WF_ATANK_LABEL {
-    position: fixed;
-    top: 15.7em;
-    left: 45em;
-    color: #000000;
-    /*    font-weight:bold; 
-    text-decoration:underline;*/
-}
-/* 車数（A重油） */
-#WF_ATANK {
-    position: fixed;
-    top: 17em;
-    left: 43.4em;
-    border-radius: 3px;
-    padding-left: 21px;
-}
-
-    #WF_ATANK input[type='text'] {
-        Height: 1.4em;
-        Width: 7em;
-    }
-
-
-/* 実行画面 ヘッダー部(詳細) */
-.Operation input[type='text'] {
-    padding-left: 1.3em;
-}
-
-.Operation2 {
-    margin-left: 2em;
-    margin-top: 0.5em;
-    height: 1.5em;
-}
-
-    .Operation2 a {
-        position: relative;
-        margin: 0em 0.7em 0em 0em;
-        top: -0.4em;
-    }
-
-
-/* 実行画面 ヘッダー部 */
-
-.headerbox {
-    top: 2.4em;
-    left: 0em;
-    height: calc(- 18.4em - 1.4em + 100%);
-    width: 100%;
-    position: fixed;
-    overflow: hidden;
-    background-color: rgb(217,222,228);
-    min-width: 990px;
-}
-
-/* 実行画面 明細部 */
-/*
+/* 下段の最小の高さ */
 .detailbox {
-    top: calc(-2.4em - 22.2em - 1.4em + 100%);
-    bottom: 1.4em;
-    left: 0em;
-    height: 100%;
+    min-height: 120px;
+}
+/* 一覧表の最小高さ */
+
+/* 油種別タンク車数(車)レイアウト */
+.summaryAreaWrapper {
     width: 100%;
-    position: fixed;
-    overflow: hidden;
-    background-color: rgb(237,237,237);
-}
-*/
-/* セルの設定(共通) */
-
-div[data-generated="1"] td,
-div[data-generated="1"] th {
-    border: 1px solid White;
-    height: 28px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    display: flex;
+    flex-wrap: nowrap;
+    box-sizing: border-box;
 }
 
-/*テキストボックス*/
-.TextBox {
-    background-repeat: no-repeat;
-    background-position: 1px;
+.summaryAreaWrapper .rightSpace {
+    margin-left: auto; /* 右に寄せる為マージンで埋める */
+    box-sizing: border-box;
 }
 
-/*カレンダーオープン用アイコン*/
-.CalendarIcon {
-    background-image: url(../img/calendar.png);
-    background-repeat: no-repeat;
-    background-position: 1px;
+.summaryArea {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column; /* 上下→左右の順で折り返す  */
+    justify-content: center;
+    align-items: center;
+    height: 120px; /* .summaryArea > span の高さが50の為 ２項目分の行となる */
+    box-sizing: border-box;
+}
+/* 1項目ごとの共通設定 */
+.summaryArea > span {
+    height: 55px;
+    width: 90px;
+    box-sizing: border-box;
+    display: block;
+}
+/* １項目内にあるa要素はブロック要素にする */
+.summaryArea > span > a {
+    display: block;
+    vertical-align: middle;
+}
+/* 表名称項目 2行分の高さと幅調整 */
+.summaryArea > span:nth-child(1) {
+    height: 110px;
+    width: 180px;
 }
 
-/* 交付アラート、全検アラートのツールチップをOFFにする */
-div[data-generated="1"] td:nth-child(7),
-div[data-generated="1"] td:nth-child(9) {
-    pointer-events: none;
+.summaryArea > span:nth-child(1) .requiredMark::after {
+    margin-top: -0.8em !important;
+}
+/* 合計項目 2行分の高さと調整 */
+.summaryArea > span:nth-child(2) {
+    height: 110px;
+}
+
+.summaryArea > span:nth-child(2) > a:nth-child(2) {
+    background-color: rgb(240, 240, 240);
+    border: 1px solid darkgray;
+    border-radius: 5px;
+    height: 86px;
+}
+/* 合計項目のテキストボックス高さ調整 */
+.summaryArea > span:nth-child(2) input[type=text] {
+    border-color: transparent; /* rgb(240, 240, 240);*/
+}
+/* 合計表内のテキストボックスの文字はすべて右寄せ */
+.summaryArea input[type=text] {
+    width: 100%;
+    text-align: right;
+    height: 32px;
+}
+/* 表名称を除き項目名は中央寄せ */
+.summaryArea > span:nth-child(n + 2) > a:nth-child(1) {
+    text-align: center;
+}
+
+#pnlListArea {
+    position: static;
+    min-height: 90px;
+    height: 100%;
+}
+
+.listWrapper {
+    position: relative;
+    height: calc(100% - 48px);
+    width: calc(100% - 20px);
+    padding-bottom: 12px;
+    margin-left: 20px;
+}
+/* 上部の入力欄の項目名の右寄せ */
+#WF_DEPDATE_LABEL, #WF_ARRSTATION_LABEL,
+#WF_ARRDATE_LABEL, #WF_ACCDATE_LABEL {
+    text-align: right;
 }
