--- a/JOTWEB/OIL/css/OIT0003D.css
+++ b/JOTWEB/OIL/css/OIT0003D.css
@@ -92,6 +92,29 @@ _:-ms-lang(x)::backdrop, .calendarIconArea div, .boxIconArea div {
     width: 100% !important;
 }
 
+/* ID chkOrderInfoチェックボックス自体を非表示 */
+#chkOrderInfo {
+    display: none;
+}
+    /* チェックボックスの隣のラベルのスタイル(未チェック時) */
+    #chkOrderInfo + label:after {
+        background-color: lightgray;
+        content: "　積置なし";
+        color: white;
+        display: inline-block;
+        font-weight: bold;
+        width: 70px;
+    }
+    /* チェックボックスの隣のラベルのスタイル(未チェック時) */
+    #chkOrderInfo:checked + label:after {
+        background-color: lightgray;
+        content: "　積置あり";
+        color: black;
+        font-weight: bold;
+        width: 70px;
+    }
+
+
 /* ************************** */
 /* ヘッダーエリアの合計欄     */
 /* ************************** */
