--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -12,6 +12,15 @@
 .listTitle {
     margin-top:10px;
 }
+/* 上部テキストボックス */
+#WF_INVENTORYDAYS {
+    height: 24px;
+    margin: 0;
+    padding-top: 1px;
+    padding-bottom: 0px;
+    width:80px;
+    text-align :right;
+}
 /* ********** */
 /* 提案表定義 */
 /* ********** */
