--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -95,6 +95,20 @@
     display:flex;
     flex-wrap:wrap;
 }
+/* 提案表列車Noが1個来た場合の設定 */
+/* 60pxだと狭すぎて日付がつぶれるので調整する */
+#divSuggestList > div.dataColumn.has1Col > div.values > div {
+    width:110px;
+    min-width:110px;
+    max-width:110px;
+}
+#divSuggestList > div.dataColumn.dataColumn.has1Col {
+    width: 110px;
+    min-width: 110px;
+    max-width: 110px;
+    display: flex;
+    flex-wrap: wrap;
+}
 /* 提案表日付データ幅 一杯に伸ばす */
 #divSuggestList .suggestDate{
     width:100%;
@@ -399,17 +413,19 @@
 /* ****************** */
 /* 日付部分の土日編集 */
 /* ****************** */
+/* 上のみ塗りつぶしパターン */
 /* 土曜 */
-#divSuggestList div.suggestDate.week6,
+/*#divSuggestList div.suggestDate.week6,
 #divStockList div.dateItem div.week6 {
     background-color:blue;
-}
+}*/
 /* 日曜 */
-#divSuggestList div.suggestDate.week0,
+/*#divSuggestList div.suggestDate.week0,
 #divStockList div.dateItem div.week0 {
     background-color: red;
-}
+}*/
 
+/* 曜日文言のみ塗りつぶしパターン */
 /* 土曜 */
 /*#divSuggestList div.suggestDate.week6 > span > span,
 #divStockList div.dateItem div.week6 > span > span {
@@ -420,3 +436,54 @@
 #divStockList div.dateItem div.week0 > span > span {
     color: red;
 }*/
+
+/* 列塗りつぶしパターン */
+/* 土曜 */
+#divSuggestList div.dataColumn.week6 > div.suggestDate,
+#divSuggestList div.dataColumn.week6 > div.values > div,
+#divStockList div.dateItem div.week6,
+#divStockList div.oilTypeData div.week6,
+#divStockList div.oilTypeData div.week6 > div{
+    color: #14171A;
+    background-color: rgb(189,215,238) !important;
+}
+/* 日曜祝日 */
+#divSuggestList div.dataColumn.week0 > div.suggestDate,
+#divSuggestList div.dataColumn.week0 > div.values > div,
+#divSuggestList div.dataColumn.holiday1 > div.suggestDate,
+#divSuggestList div.dataColumn.holiday1 > div.values > div,
+#divStockList div.dateItem div.week0,
+#divStockList div.oilTypeData div.week0,
+#divStockList div.oilTypeData div.week0 > div,
+#divStockList div.dateItem div.holiday1,
+#divStockList div.oilTypeData div.holiday1,
+#divStockList div.oilTypeData div.holiday1 > div {
+    color: #14171A;
+    background-color: rgb(248,203,173) !important;
+}
+/* TIP表示 */
+[data-tiptext] {
+    position: relative;
+    display: inline-block;
+}
+
+[data-tiptext]::after {
+    position: absolute;
+    transition: all 0.3s ease 0s;
+    opacity: 0;
+    top: 0px;/*HOVERのスタート位置*/
+    left: 0px;
+    display: block;
+    padding: 0.2em 0.5em;
+    content: attr(data-tiptext);
+    white-space: nowrap;
+    color: #ffffff;
+    border-radius: 6px;
+    //background: #1b2538;
+    background-color: RGBA(27, 37, 56, 0.8);
+    font-size:0.8em;
+}
+[data-tiptext]:hover::after {
+    top: 20px; /*HOVER位置*/
+    opacity: 1;
+}
