--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -510,9 +510,11 @@ div.oilTypeData div.col1 span[data-tiptext] {
     //background: #1b2538;
     background-color: RGBA(27, 37, 56, 0.8);
     font-size:0.8em;
+    z-index:2;
+    pointer-events:none;
 }
 [data-tiptext]:hover::after {
-    top: 20px; /*HOVER位置*/
+    top: 24px; /*HOVER位置*/
     opacity: 1;
 }
 /* 完全に消す予定だが一旦非表示 */
