--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -54,6 +54,19 @@
     min-width: 80px;
     max-width: 80px;
 }
+#divSuggestList > .leftColumn {
+    flex-flow:column wrap; 
+    width: 100%; 
+    height: 100%; 
+    display: flex; 
+    align-items: stretch; 
+    align-content: stretch;
+}
+#divSuggestList > .leftColumn > div:nth-child(2) {
+    height: calc(24px * 9); 
+    border-bottom: 1px solid darkgray !important; 
+    display:block !important;
+}
 /* 提案表2列目の油種などの文言幅 */
 #divSuggestList > div.oilTypeColumn {
     width: 90px;
@@ -421,6 +434,7 @@ div.oilTypeData {
 #divEmptyBox > div:hover {
     background-color: #8e2b63;
 }
+div[data-oilcode][data-title='suggestValue'] span[data-tiptext],
 div.oilTypeData div.col1 span[data-tiptext] {
     cursor: pointer;
 }
