Menu冗長ロジック圧縮、HTMLのIDがuniqueになっていない部分を修正。在庫表、油槽所フラグを考慮し提案表の表示非表示を制御

--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -52,7 +52,7 @@ a[id^="Menu_"] table td {
     max-width:100%;
 }
 /* メニュー枠内タイトルの共通設定(色や画像は後述スタイルで個別設定)(spanタグIDが"WF_MenuLabe_"で始まるもの) */
-span[id^=WF_MenuLabe_] {
+span[id*=WF_MenuLabe_] {
     display: inline-block;
     overflow: hidden;
     width: 100%;
