--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -493,6 +493,52 @@ div.oilTypeData div.col1 span[data-tiptext] {
 #divStockList div.oilTypeData:nth-child(even) div.colStockValue div:nth-child(odd){
     background-color: #DEF4E9;
 }
+/* **************************** */
+/* 表の色(油種個別設定)         */
+/* **************************** */
+/* ハイオク */
+#divSuggestList div[data-title=suggestValue][data-oilcode="1001"],
+#divStockList div.oilTypeData[data-oilcode="1001"] div.col1 > div {
+    color: #14171A;
+    background-color: rgb(255,255,0);
+}
+/* レギュラー */
+#divSuggestList div[data-title=suggestValue][data-oilcode="1101"],
+#divStockList div.oilTypeData[data-oilcode="1101"] div.col1 > div {
+    background-color: rgb(255,192,0);
+}
+/* 灯油 */
+#divSuggestList div[data-title=suggestValue][data-oilcode="1301"],
+#divStockList div.oilTypeData[data-oilcode="1301"] div.col1 > div {
+    color: #14171A;
+    background-color: rgb(255,255,255);
+}
+/* 未添加灯油 */
+#divSuggestList div[data-title=suggestValue][data-oilcode="1302"],
+#divStockList div.oilTypeData[data-oilcode="1302"] div.col1 > div {
+    color: #14171A;
+    background-color: rgb(221,245,253);
+}
+/* 軽油 */
+#divSuggestList div[data-title=suggestValue][data-oilcode="1401"],
+#divStockList div.oilTypeData[data-oilcode="1401"] div.col1 > div {
+    background-color: rgb(0,176,80);
+}
+/* 3号軽油 */
+#divSuggestList div[data-title=suggestValue][data-oilcode="1404"],
+#divStockList div.oilTypeData[data-oilcode="1404"] div.col1 > div {
+    background-color: rgb(146,208,80);
+}
+/* A重油 */
+#divSuggestList div[data-title=suggestValue][data-oilcode="2101"],
+#divStockList div.oilTypeData[data-oilcode="2101"] div.col1 > div {
+    background-color: rgb(0,112,192);
+}
+/* LSA */
+#divSuggestList div[data-title=suggestValue][data-oilcode="2201"],
+#divStockList div.oilTypeData[data-oilcode="2201"] div.col1 > div {
+    background-color: rgb(0,176,240);
+}
 /* ****************** */
 /* 日付部分の土日編集 */
 /* ****************** */
