--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -154,7 +154,7 @@
     border-right:0px;
 }
 #divSuggestList div.leftColumn div:last-child {
-    display:none;
+  /*  display:none; */
 }
 #divSuggestList div.leftColumn div:not(:nth-child(1)),
 #divSuggestList div.oilTypeColumn div:not(:nth-child(1)){
@@ -345,7 +345,7 @@ span.minus {
 }
 #divStockList div.col6 > div,
 #divStockList div.colStockValue > div{
-    height:calc(100% / 6);
+    height:calc(100% / 8);
     max-height:23.5px;
 }
 #divStockList div.colStockInfoTopRow {
@@ -370,13 +370,18 @@ span.morningStockIdx0 {
     //line-height:0.8em;
     width:calc(100% + 5.5px);
 }
-#divStockList input[type=text][name$="txtSend"] {
+#divStockList input[type=text][name$="txtSend"],
+#divStockList input[type=text][name$="txtReceiveFromLorry"] {
     width: calc(100% + 5.5px);
 }
 /* :not(.col1) > div:last-child > span */
-#divStockList div.oilTypeData div[class^="col"]:not(.col1):not(.col2):not(.col3):not(.col4):not(.col5) > div:last-child > span {
+#divStockList div.oilTypeData div[class^="col"] > div > span.stockinputtext,
+#divStockList div.oilTypeData div[class^="col"] > div > span[class^="morningStockIdx"] {
     margin-top: 0;
 }
+/*#divStockList div.oilTypeData div[class^="col"]:not(.col1):not(.col2):not(.col3):not(.col4):not(.col5) > div:last-child > span {
+    margin-top: 0;
+}*/
 
 /* ************** */
 /* 在庫表罫線制御 */
@@ -605,14 +610,15 @@ div.oilTypeData div.col1 span[data-tiptext] {
     display: block;
     padding: 0.2em 0.5em;
     content: attr(data-tiptext);
-    white-space: nowrap;
+    //white-space: nowrap;
     color: #ffffff;
     border-radius: 6px;
     //background: #1b2538;
     background-color: RGBA(27, 37, 56, 0.8);
     font-size:0.8em;
-    z-index:2;
+    z-index:5;
     pointer-events:none;
+    white-space:pre;
 }
 [data-tiptext]:hover::after {
     top: 24px; /*HOVER位置*/
@@ -643,7 +649,7 @@ _:-ms-lang(x)::backdrop,
 #divSuggestList > .leftColumn {
     position:sticky;
     left:-10px;
-    z-index:3;
+    z-index:4;
 }
 #divSuggestList > .oilTypeColumn {
     position: sticky;
